syntax = "proto3";

package proto;

option go_package = "github.com/tkp-VL037/go-employee/proto";

message NoParam {}